# TTL

./: .gitignore  CNAME  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  LICENSE.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  config.yaml  config.yml  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bugs.md  features.md
.github/workflows/: ci.yml  deployment.yml
assistants/: chat.py
dependencies/: __init__.py  util.py
errors/: __init__.py  custom.py
infrastructures/: __init__.py  database.py
infrastructures/crud/: __init__.py  task.py
models/: __init__.py  task.py
routers/: assistant.py  task.py
schemas/: __init__.py  assistant.py  task.py
tests/: assistants_chat.py  dependencies_util.py  infrastructures_crud_task.py  infrastructures_database.py  models_task.py  routers_task.py  schemas_assistant.py  schemas_task.py  utils_config.py  utils_logger.py
utils/: __init__.py  config.py  logger.py
views/: index.html  index.js  style.css
