[tool.poetry]
name = "todo-task-list"
version = "0.1.0"
description = "Simple TODO list app, using MVC design pattern"
authors = ["Ismael Mousa <ismaelramzimousa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pyyaml = "^6.0.1"
pymongo = "^4.6.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
